<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="honda.bookworm.View.UserSignup_ViewHandler">


    <ImageView
        android:id="@+id/signup_user_img"
        android:layout_width="350dp"
        android:layout_height="300dp"
        android:alpha=".5"
        android:contentDescription="User image bottom right of page"
        android:src="@drawable/icon_person"
        android:translationX="100dp"
        android:translationY="50dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/signup_author_img"
        android:layout_width="300dp"
        android:layout_height="275dp"
        android:alpha=".5"
        android:contentDescription="Image of a quill at the bottom right of the page"
        android:src="@drawable/icon_author_pen"
        android:translationX="50dp"
        android:translationY="5dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:contentDescription="Peeking worm from the top left corner of the screen"
        android:src="@drawable/worm_hearteyes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/signup_signup_heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="65dp"
        android:text="@string/sign_up"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/signup_firstname_input"
        android:layout_width="255dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="?colorPrimary"
        android:hint="First Name"
        android:inputType="text"
        android:paddingHorizontal="8dp"
        android:paddingVertical="12sp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_signup_heading"
        android:maxLines="1"
        android:maxLength="16"/>

    <EditText
        android:id="@+id/signup_lastname_input"
        android:layout_width="255dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="?colorPrimary"
        android:hint="Last Name"
        android:inputType="text"
        android:paddingHorizontal="8dp"
        android:paddingVertical="12sp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_firstname_input"
        android:maxLines="1"
        android:maxLength="16"/>


    <EditText
        android:id="@+id/signup_username_input"
        android:layout_width="255dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="?colorPrimary"
        android:hint="@string/user_name"
        android:inputType="text"
        android:paddingHorizontal="8dp"
        android:paddingVertical="12sp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_lastname_input"
        android:maxLines="1"
        android:maxLength="16"/>

    <EditText
        android:id="@+id/signup_password_input"
        android:layout_width="255dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="?colorPrimary"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingHorizontal="8dp"
        android:paddingVertical="12sp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_username_input"
        android:maxLines="1"
        android:maxLength="25"/>

    <CheckBox
        android:id="@+id/signup_is_author_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:text="I am an author"
        android:textSize="20sp"
        android:onClick="isAuthorCheckBoxClicked"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_password_input" />


    <Button
        android:id="@+id/signup_signup_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/worm_skin"
        android:fontFamily="sans-serif-black"
        android:paddingHorizontal="25dp"
        android:paddingVertical="10dp"
        android:text="@string/sign_up"
        android:textSize="23sp"
        android:textStyle="bold"
        android:onClick="isSignupButtonClicked"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_is_author_checkbox" />


</androidx.constraintlayout.widget.ConstraintLayout>