...
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="181dp"
        tools:text="User Login" />

    <EditText
        android:id="@+id/userlogin_username_input"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:background="?colorPrimary"
        android:hint="@string/user_name"
        android:paddingHorizontal="8dp"
...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userlogin_login_heading"
        android:maxLines="1"
        android:maxLength="18"/>

    <EditText
        android:id="@+id/userlogin_password_input"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="?colorPrimary"
        android:hint="@string/password"
        android:inputType="textPassword"
...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userlogin_username_input"
        android:maxLines="1"
        android:maxLength="25"/>

    <Button
        android:id="@+id/userlogin_login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:backgroundTint="@color/worm_skin"
        android:fontFamily="sans-serif-black"
        android:paddingHorizontal="50dp"
...
        android:onClick="userLoginButtonClicked"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userlogin_password_input" />

    <TextView
        android:id="@+id/userlogin_signup_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:focusable="true"
        android:clickable="true"
        android:onClick="userSignUpLinkClicked"
...
