...

        <ImageButton
            android:id="@+id/home_proceed_to_search"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_alignParentTop="true"
           android:layout_alignEnd="@+id/home_userProfile_button"
            android:layout_marginTop="20dp"
            android:layout_marginRight="55dp"
            android:background="@drawable/icon_search"
            android:backgroundTint="@color/inactive_grey"
            android:hapticFeedbackEnabled="true"
            android:onClick="onSearchPressed" />
...
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/inactive_grey"
            android:layout_marginVertical="5dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/home_userProfile_viewProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:rippleColor="@color/grass_green"
            android:text="View Profile"
            android:textAlignment="center"
            android:textColor="#61676D"
            android:onClick="onViewProfilePressed"
            android:background="@drawable/button_ripple" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/home_userProfile_logoutButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            android:textAlignment="center"
            android:textColor="#61676D"
            android:onClick="onLogoutPressed"
...
