...
        android:layout_marginBottom="10dp"
        android:elevation="10dp"
        android:paddingVertical="20dp"
        android:translationZ="5dp">

        <TextView
            android:id="@+id/userprofile_user_fullname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:text="First Last"
            android:textSize="25dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/userprofile_user_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/userprofile_user_fullname"
            android:text="\@user_name"
            android:textSize="15dp" />

...
